@@ -174,6 +174,23 @@
      * This parameter is case-sensitive.
      **/
     // "clearcanvas" : [ "CLEARCANVAS", "192.168.1.1", 104, "ClearCanvas" ]
+
+    /**
+     * By default, the Orthanc SCP accepts all DICOM commands (C-GET,
+     * C-STORE, C-FIND, C-MOVE) issued by the remote SCU
+     * modalities. Starting with Orthanc 1.4.3, it is possible to
+     * specify which DICOM commands are allowed, separately for each
+     * remote modality, using the syntax below.
+     **/
+    //"untrusted" : {
+    //  "AET" : "ORTHANC",
+    //  "Port" : 104,
+    //  "Host" : "127.0.0.1",
+    //  "AllowEcho" : false,
+    //  "AllowFind" : false,
+    //  "AllowMove" : false,
+    //  "AllowStore" : true
+    //}
   },
 
   // Whether the Orthanc SCP allows incoming C-Echo requests, even
